<resources>
    <string name="app_name">瑞祥平台</string>
    <string name="loading">加载中...</string>
    <string name="action_settings">Settings</string>
    <string name="login_phone">手机号</string>
    <string name="login_phonehint">请输入手机号</string>
    <string name="login_verifycode">验证码</string>
    <string name="login_verifycodehint">请输入验证码</string>
    <string name="login_verifycodeget">获取验证码</string>
    <string name="login_pwd">密 码</string>
    <string name="login_pwdhint">请输入密码</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="setting">设置</string>
    <string name="inform">通知</string>
    <string name="exit">退出登录</string>
    <string name="add">添加</string>
    <string name="upd_password">修改密码</string>
    <string name="version">版本</string>
    <string name="please_input_search_content">请输入搜索内容</string>
    <string name="phone_num">手机号</string>
    <string name="please_input_phone_num">请输入手机号</string>
    <string name="verification_code">验证码</string>
    <string name="please_input_verification_code">请输入验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="old_password">原始密码</string>
    <string name="please_input_old_password">请输入原始密码</string>
    <string name="password">密码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="new_password">新密码</string>
    <string name="please_input_password_again">请再次输入密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="verification_code_login">验证码登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="login">登录</string>
    <string name="new_user_register">新用户注册</string>
    <string name="referral_code">推荐码</string>
    <string name="please_input_referral_code">请输入推荐码</string>
    <string name="read_and_agree">我同意</string>
    <string name="user_agreement">《用户协议》</string>
    <string name="confirm">确定</string>
    <string name="submit">提交</string>
    <string name="client">客户</string>
    <string name="business">商务</string>
    <string name="wallet">钱包</string>
    <string name="find">发现</string>
    <string name="mine">我</string>
    <string name="serial_number">编号：</string>
    <string name="head_photo">头像</string>
    <string name="name">姓名</string>
    <string name="gender">性别</string>
    <string name="age">年龄</string>
    <string name="birthday">生日</string>
    <string name="phone">电话</string>
    <string name="mailbox">邮箱</string>
    <string name="area">地区</string>
    <string name="erweima">二维码</string>
    <string name="has_withdraw">已提现</string>
    <string name="balance">余额</string>
    <string name="this_month">本月</string>
    <string name="month_income">累计</string>
    <string name="bank_card">银行卡</string>
    <string name="please_bind_yourself_bank_card">请绑定持卡人本人的银行卡</string>
    <string name="please_input_name">请输入姓名</string>
    <string name="please_input_name_importance">请输入姓名(必填)</string>
    <string name="please_input_phone_num_importance">请输入手机号(必填)</string>
    <string name="please_input_bank_card_num">请输入银行卡号</string>
    <string name="please_choice_bank">请选择开户行</string>
    <string name="bank_name">开户行</string>
    <string name="sub">提交</string>
    <string name="tip_one">• 请认真填写本人银行卡号</string>
    <string name="tip_two">• 如有错误后果由自己承担</string>
    <string name="my_balance">我的余额</string>
    <string name="withdraw_deposit">提现</string>
    <string name="first_withdraw_deposit_set_pwd">首次提现设置体现密码</string>
    <string name="please_set_bank_pwd">请慎重设置密码</string>
    <string name="withdraw_deposit_pwd">提现密码</string>
    <string name="set_pwd">设置密码</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="to_bank_card">到账银行卡</string>
    <string name="withdraw_deposit_price">提现金额</string>
    <string name="please_input_withdraw_deposit_price">请输入提现金额</string>
    <string name="please_input_withdraw_deposit_pwd">请输入提现密码</string>
    <string name="client_name">客户姓名</string>
    <string name="phone_number">手机号码</string>
    <string name="company_name">公司名称</string>
    <string name="acreage">面积(㎡)</string>
    <string name="measure_location">量房地址</string>
    <string name="client_type">客户类型</string>
    <string name="wx_number">微信号</string>
    <string name="tc_type">套餐选择</string>
    <string name="please_input_company_name">请输入公司名称</string>
    <string name="please_input_acreage">请输入面积</string>
    <string name="please_input_measure_location">请输入量房地址</string>
    <string name="please_input_wx_number">请输入微信号</string>
    <string name="ca_intentional_style">意向风格：</string>
    <string name="ca_soft_furniture">家具软装：</string>
    <string name="ca_intelligent_weak_current">智能弱电：</string>
    <string name="ca_fengshui_requirements">风水要求：</string>
    <string name="daytime">白天</string>
    <string name="night">晚上</string>
    <string name="both_are_ok">均可</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="have">有</string>
    <string name="without">无</string>
    <string name="ci_proHead">客户姓名：</string>
    <string name="ci_DecorationAddress">量房地址：</string>
    <string name="ca_LeaseTerm">租期：</string>
    <string name="ca_DecBudgetPrice">装修预算：</string>
    <string name="ca_Rental">租金单价：</string>
    <string name="ca_RentFreeDate">免租期：</string>
    <string name="ca_LeaseTermStart">租期开始：</string>
    <string name="ca_LeaseTermEnd">租期结束：</string>
    <string name="ca_ca_HousingSituation">房屋现状：</string>
    <string name="ca_HouseOrientation">房屋朝向：</string>
    <string name="ca_OccupyPublicCorridor">占用公共过道：</string>
    <string name="ca_CargoDoorHight">货梯门高度：</string>
    <string name="ca_CargoDoorWide">货梯门宽度：</string>
    <string name="ca_OriginalGround">原地面保存：</string>
    <string name="ca_isGroundSmooth">原地面平整：</string>
    <string name="ca_OriginalGroundMaterial">原地面材质：</string>
    <string name="ca_OriginalWallMaterial">原墙面材质：</string>
    <string name="ca_OriginalTopMaterial">原顶面材质：</string>
    <string name="ca_GroundElevation">地面高度差：</string>
    <string name="ca_SpaceMaxHeight">空间最高点：</string>
    <string name="ca_SpaceMinHeight">空间最低点：</string>
    <string name="ca_mainBeamHeight">主梁下高：</string>
    <string name="ca_SecondaryHeight">次梁下高：</string>
    <string name="ca_MinimumSprayHeight">喷淋最低点：</string>
    <string name="ca_AirConditionerNum">空调设备：</string>
    <string name="ca_TuyereMinimumHeight">风口最低点：</string>
    <string name="ca_StrongBoxNum">强电箱：</string>
    <string name="ca_WeakBoxNum">弱电箱：</string>
    <string name="ca_WaterPath">上下水路径：</string>
    <string name="ca_UpWaterSpot">上水点：</string>
    <string name="ca_DownWaterSpot">下水点：</string>
    <string name="ca_DownWaterSpotSize">下水管径：</string>
    <string name="ca_CurtainWallSpacing">幕墙架间距：</string>
    <string name="ca_WindowType">窗户类型：</string>
    <string name="ca_windowsillHight">窗台高：</string>
    <string name="ca_WindowWidth">窗户宽：</string>
    <string name="ca_WindowHight">窗户高：</string>
    <string name="ca_DecBudgetPriceUnit">装修预算（万）：</string>
    <string name="ca_RentalUnit">租金单价（元/平）：</string>
    <string name="proHead">客户姓名</string>
    <string name="DecorationAddress">量房地址</string>
    <string name="LeaseTerm">租期</string>
    <string name="DecBudgetPrice">装修预算</string>
    <string name="Rental">租金单价</string>
    <string name="RentFreeDate">免租期</string>
    <string name="LeaseTermStart">租期开始</string>
    <string name="LeaseTermEnd">租期结束</string>
    <string name="HousingSituation">房屋现状</string>
    <string name="HouseOrientation">房屋朝向</string>
    <string name="OccupyPublicCorridor">占用公共过道</string>
    <string name="CargoDoorHight">货梯门高度</string>
    <string name="CargoDoorWide">货梯门宽度</string>
    <string name="OriginalGround">原地面保存</string>
    <string name="isGroundSmooth">原地面平整</string>
    <string name="OriginalGroundMaterial">原地面材质</string>
    <string name="OriginalWallMaterial">原墙面材质</string>
    <string name="OriginalTopMaterial">原顶面材质</string>
    <string name="GroundElevation">地面高度差</string>
    <string name="SpaceMaxHeight">空间最高点</string>
    <string name="SpaceMinHeight">空间最低点</string>
    <string name="mainBeamHeight">主梁下高</string>
    <string name="SecondaryHeight">次梁下高</string>
    <string name="MinimumSprayHeight">喷淋最低点</string>
    <string name="AirConditionerNum">空调设备</string>
    <string name="TuyereMinimumHeight">风口最低点</string>
    <string name="StrongBoxNum">强电箱</string>
    <string name="WeakBoxNum">弱电箱</string>
    <string name="WaterPath">上下水路径</string>
    <string name="UpWaterSpot">上水点</string>
    <string name="DownWaterSpot">下水点</string>
    <string name="DownWaterSpotSize">下水管径</string>
    <string name="CurtainWallSpacing">幕墙架间距</string>
    <string name="WindowType">窗户类型</string>
    <string name="windowsillHight">窗台高</string>
    <string name="WindowWidth">窗户宽</string>
    <string name="WindowHight">窗户高</string>
    <string name="DecBudgetPriceUnit">装修预算（万）</string>
    <string name="RentalUnit">租金单价（元/平）</string>
    <string name="one_month">一个月内</string>
    <string name="two_month">1个月内</string>
    <string name="between_one_two_month">1-2个月</string>
    <string name="two_month_more">2个月以上</string>
    <string name="tenancy_term">租期开始及结束时间</string>
    <string name="roughcast_house">毛坯房</string>
    <string name="rinsing_house">清水房</string>
    <string name="remould_old_house">旧房改造</string>
    <string name="renovate">翻新</string>
    <string name="deluxe_room">精装房</string>
    <string name="east">东</string>
    <string name="west">西</string>
    <string name="south">南</string>
    <string name="north">北</string>
    <string name="southeast">东南</string>
    <string name="northwest">西北</string>
    <string name="northeast">东北</string>
    <string name="southwest">西南</string>
    <string name="input_please">请输入</string>
    <string name="cement_blank">水泥毛坯</string>
    <string name="cement_screed_coat">水泥找平</string>
    <string name="conductive_floor">防静电地板</string>
    <string name="carpet">地毯</string>
    <string name="floor_tile">地砖</string>
    <string name="wood_floor">木地板</string>
    <string name="plastic_floor">塑胶地板</string>
    <string name="cement">水泥</string>
    <string name="craping_the_great_white">刮大白</string>
    <string name="emulsion_varnish">乳胶漆</string>
    <string name="wallpaper">墙纸</string>
    <string name="mineral_wool_board">矿棉板吊顶</string>
    <string name="plasterboard">石膏板吊顶</string>
    <string name="grating">铝方通/格栅</string>
    <string name="aluminous_gusset_plate">铝扣板吊顶</string>
    <string name="slab_bottom">板底</string>
    <string name="slab_top">板顶</string>
    <string name="glass_curtain_wall">玻璃幕墙</string>
    <string name="bay_window">飘窗</string>
    <string name="ordinary_window">普通窗</string>
    <string name="french_sash">落地窗</string>
    <string name="ca_req_con_time">施工时间：</string>
    <string name="ca_product_protection">公共区域保护：</string>
    <string name="ca_protective_material">保护材料：</string>
    <string name="ca_property_insurance">工程一切险要求：</string>
    <string name="ca_designated_fire_company">指定消防公司：</string>
    <string name="ca_designated_air_company">指定空调公司：</string>
    <string name="ca_designated_sinotrans">指定垃圾外运公司：</string>
    <string name="ca_blueprint">报审蓝图：</string>
    <string name="fifteen_mm_board">15mm细木板</string>
    <string name="kehuxinxi">客户信息</string>
    <string name="yidi">异   地</string>
    <string name="xingming">姓   名</string>
    <string name="dianhua">电   话</string>
    <string name="mianji">面   积</string>
    <string name="xindian">信   电</string>
    <string name="fangyuan">房   源</string>
    <string name="gongsi">公   司</string>
    <string name="hangye">行业</string>
</resources>