<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="100px">
        <include layout="@layout/layout_title"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24px">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="36px"
                android:layout_height="36px"
                android:src="@drawable/ic_ired" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="提示：为了您的账号安全，请不要使用连续和相同数字设定密码；密码支持六位以上字符。"
                android:textSize="@dimen/text_size_m"
                android:textColor="@color/text_red"
                android:layout_marginLeft="5px"
                android:layout_marginTop="3px"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:layout_marginTop="40px">

            <ImageView
                android:id="@+id/iv_phone_icon"
                android:layout_width="54px"
                android:layout_height="54px"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20px"
                android:src="@mipmap/phone_icon" />

            <TextView
                android:id="@+id/tv_phone_text"
                android:layout_width="130px"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20px"
                android:layout_toRightOf="@id/iv_phone_icon"
                android:text="@string/phone_num"
                android:textColor="@color/colorBlackLight"
                android:textSize="@dimen/text_size_l" />

            <EditText
                android:id="@+id/et_phone_num"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tv_phone_text"
                android:background="@null"
                android:hint="@string/please_input_phone_num"
                android:inputType="number"
                android:maxLength="11"
                android:textColor="@color/colorBlackLight"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/text_size_l" />

            <TextView
                android:id="@+id/tv_old_password_line"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@drawable/selector_input_line"
                android:enabled="false" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100px">

            <ImageView
                android:id="@+id/iv_verification_code_icon"
                android:layout_width="54px"
                android:layout_height="54px"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20px"
                android:src="@mipmap/verification_code_icon" />

            <TextView
                android:id="@+id/tv_verification_code_text"
                android:layout_width="130px"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20px"
                android:layout_toRightOf="@id/iv_verification_code_icon"
                android:text="@string/verification_code"
                android:textColor="@color/colorBlackLight"
                android:textSize="@dimen/text_size_l" />

            <com.rxjy.rxcompound.widget.DownTimerButton
                android:id="@+id/btn_verification_code"
                android:layout_width="150px"
                android:layout_height="44px"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/selector_btn_sub_red"
                android:text="@string/get_verification_code"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_m" />

            <EditText
                android:id="@+id/et_verification_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/btn_verification_code"
                android:layout_toRightOf="@id/tv_verification_code_text"
                android:background="@null"
                android:hint="@string/please_input_verification_code"
                android:inputType="number"
                android:textColor="@color/colorBlackLight"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/text_size_l" />

            <TextView
                android:id="@+id/tv_verification_code_line"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@drawable/selector_input_line"
                android:enabled="false" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100px">

            <ImageView
                android:id="@+id/iv_new_password_icon"
                android:layout_width="54px"
                android:layout_height="54px"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20px"
                android:src="@mipmap/new_password_icon" />

            <TextView
                android:id="@+id/tv_new_password_text"
                android:layout_width="130px"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20px"
                android:layout_toRightOf="@id/iv_new_password_icon"
                android:text="@string/new_password"
                android:textColor="@color/colorBlackLight"
                android:textSize="@dimen/text_size_l" />

            <EditText
                android:id="@+id/et_new_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tv_new_password_text"
                android:background="@null"
                android:hint="@string/please_input_password_again"
                android:inputType="textPassword"
                android:textColor="@color/colorBlackLight"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/text_size_l" />

            <TextView
                android:id="@+id/tv_new_password_line"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@drawable/selector_input_line"
                android:enabled="false" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100px">

            <ImageView
                android:id="@+id/iv_confirm_password_icon"
                android:layout_width="54px"
                android:layout_height="54px"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20px"
                android:src="@mipmap/password_icon" />

            <TextView
                android:id="@+id/tv_confirm_password_text"
                android:layout_width="130px"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20px"
                android:layout_toRightOf="@id/iv_confirm_password_icon"
                android:text="@string/confirm_password"
                android:textColor="@color/colorBlackLight"
                android:textSize="@dimen/text_size_l" />

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tv_confirm_password_text"
                android:background="@null"
                android:hint="@string/please_input_password_again"
                android:inputType="textPassword"
                android:textColor="@color/colorBlackLight"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/text_size_l" />

            <TextView
                android:id="@+id/tv_confirm_password_line"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@drawable/selector_input_line"
                android:enabled="false" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_forget_password"
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="120px"
            android:background="@drawable/selector_btn_sub_red"
            android:text="@string/confirm"
            android:textColor="@color/colorWhite"
            android:textSize="34px" />

    </LinearLayout>

</LinearLayout>