<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#cbcbcb"
    tools:context="com.rxjy.rxcompound.activity.more.ZaiGenActivity">

    <RelativeLayout
        android:id="@+id/rl_tool"
        android:layout_width="fill_parent"
        android:layout_height="100px"
        android:background="@color/textorange">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/kehuxinxi"
            android:textSize="@dimen/text_size_l6"
            android:layout_marginRight="10px"
            android:layout_marginLeft="100px"
            android:singleLine="true"
            android:ellipsize="end"
            android:textColor="@color/colorwhite"/>

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="80px"
            android:layout_height="80px"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:src="@drawable/ic_backwrite"
            android:padding="20px"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="88px"
                android:gravity="center"
                android:paddingLeft="40px"
                android:paddingRight="40px"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yidi"
                    android:textSize="28px"
                    />

                <EditText
                    android:id="@+id/et_yidi"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20px"
                    android:background="@null"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/yidi"
                    android:textColor="#595757"
                    android:textSize="28px" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#cbcbcb"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="88px"
                android:gravity="center"
                android:paddingLeft="40px"
                android:paddingRight="40px"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xingming"
                    android:textSize="28px"
                    />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20px"
                    android:background="@null"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/xingming"
                    android:textColor="#595757"
                    android:textSize="28px" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#cbcbcb"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="88px"
                android:gravity="center"
                android:paddingLeft="40px"
                android:paddingRight="40px"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dianhua"
                    android:textSize="28px"
                    />

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20px"
                    android:background="@null"
                    android:ems="10"
                    android:maxLength="11"
                    android:inputType="number"
                    android:hint="@string/dianhua"
                    android:textColor="#595757"
                    android:textSize="28px" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#cbcbcb"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="88px"
                android:gravity="center"
                android:paddingLeft="40px"
                android:paddingRight="40px"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mianji"
                    android:textSize="28px"
                    />

                <EditText
                    android:id="@+id/et_mianji"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20px"
                    android:background="@null"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="11"
                    android:hint="@string/mianji"
                    android:textColor="#595757"
                    android:textSize="28px" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#cbcbcb"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="88px"
                android:gravity="center"
                android:paddingLeft="40px"
                android:paddingRight="40px"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hangye"
                    android:textSize="28px"
                    />

                <EditText
                    android:id="@+id/et_hangye"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20px"
                    android:background="@null"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/hangye"
                    android:textColor="#595757"
                    android:textSize="28px" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#cbcbcb"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="88px"
                android:gravity="center"
                android:paddingLeft="40px"
                android:paddingRight="40px"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xindian"
                    android:textSize="28px"
                    />

                <EditText
                    android:id="@+id/et_xindian"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20px"
                    android:background="@null"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/xindian"
                    android:textColor="#595757"
                    android:textSize="28px" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#cbcbcb"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="88px"
                android:gravity="center"
                android:paddingLeft="40px"
                android:paddingRight="40px"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fangyuan"
                    android:textSize="28px"
                    />

                <EditText
                    android:id="@+id/et_fangyuan"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20px"
                    android:background="@null"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/fangyuan"
                    android:textColor="#595757"
                    android:textSize="28px" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#cbcbcb"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="88px"
                android:gravity="center"
                android:paddingLeft="40px"
                android:paddingRight="40px"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gongsi"
                    android:textSize="28px"
                    />

                <EditText
                    android:id="@+id/et_gongsi"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20px"
                    android:background="@null"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/gongsi"
                    android:textColor="#595757"
                    android:textSize="28px" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#cbcbcb"/>

            <Button
                android:id="@+id/btn_commit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
